--- a/HW1/HW1.ipynb
+++ b/HW1/HW1.ipynb
@@ -17,6 +17,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that GPUs will not help in any part except the final section with the generation of images (everything else runs in less than a second), so it is recommended to run this part of the homework on a local CPU."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -65,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Implement the following functions to compute the density and score of a GMM. You can add any other functions required."
+    "Implement the following functions to compute the density and score of a GMM. You can add any other functions required. For score computation, do not use torch's autograd (it will greatly hinder the performance)."
    ]
   },
   {
@@ -81,16 +88,6 @@
     "sigma_2 = torch.sqrt(torch.tensor(0.1))\n",
     "\n",
     "p_first = torch.tensor(0.15)  # The probability that I will sample from the first distribution."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def density_normal(x, mu, sigma):\n",
-    "    pass"
    ]
   },
   {
@@ -261,10 +258,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "density_grid = None  # Replace this with the relevant matrix, using torch.linspace and torch.meshgrid\n",
-    "score_grid = None  # Replace this with the relevant matrix, using torch.linspace and torch.meshgrid\n",
-    "density_values = None  # Fill this with the density values\n",
-    "score_values = None  # Replace this with the score values\n",
+    "density_grid = None\n",
+    "score_grid = None\n",
+    "density_values = None\n",
+    "score_values = None\n",
     "\n",
     "#### ADD YOUR CODE HERE ####\n",
     "\n",
@@ -281,14 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compare the visualizations and explain using ideas from the lecture what could be the cause for the differences."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Answer: Slow mixing, low density regions."
+    "Compare the visualizations and explain what could be causing the differences."
    ]
   },
   {
@@ -356,6 +346,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because we are using normal distributions, the noised distributions $p_\\sigma$ will just have more variance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -380,7 +377,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section you will be using everything you learned to generate images from MNIST, provided to you in your virtual machines (and available in Pytorch). Ideas are based on the paper Generative Modeling by Estimating Gradients of the Data Distribution (2019)."
+    "In this section you will be using everything you learned to generate images from MNIST, provided to you in your virtual machines (and available in Pytorch). Ideas are based on the paper Generative Modeling by Estimating Gradients of the Data Distribution (2019). You can use the paper's official implementation as a guideline to the solution. It is recommended to go over the first tutorial before solving."
    ]
   },
   {
@@ -412,10 +409,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When the score function cannot be calculated directly (as above), we cannot simply use the MSE between the model output and the true score. Hence, we have the updated loss function, suited for our annealed noise schedule:\n",
+    "When the score function cannot be calculated directly (as above), we cannot simply use the MSE between the model output and the true score. Hence, we updated loss function, suiting it to our annealed noise schedule:\n",
     "\n",
     "$$\\ell_\\text{denoise}(\\theta; \\sigma) := \\frac{1}{2}\\mathbb{E}_{x\\sim p_\\text{data}} \\mathbb{E}_{\\tilde{x}\\sim q_\\sigma(\\cdot | x)} \\left[ \\Vert s_\\theta(\\tilde{x}, \\sigma) - \\log q_\\sigma(\\tilde{x}|x)\\Vert^2 \\right]$$\n",
-    "$$  L_\\text{denoise}(\\theta) = \\frac{1}{L}\\sum_{i=1}^L \\ell_\\text{denoise}(\\theta, \\sigma_i) \\equiv \\mathbb{E}_{i \\sim \\text{Uni}(1, L)} \\left[ \\ell_\\text{denoise}(\\theta; \\sigma_i) \\right] $$\n",
+    "$$  L_\\text{denoise}(\\theta) = \\frac{1}{L}\\sum_{i=1}^L \\lambda(\\sigma_i)\\ell_\\text{denoise}(\\theta; \\sigma_i) \\equiv \\mathbb{E}_{i \\sim \\text{Uni}(1, L)} \\left[ \\sigma_i^2\\ell_\\text{denoise}(\\theta; \\sigma_i) \\right] $$\n",
     "\n",
     "Where the model is denoted as $s_\\theta$ and $\\sigma_i$ are the noise values."
    ]
@@ -441,8 +438,8 @@
     "    x: The input data [BATCH_SIZE, WIDTH, HEIGHT]\n",
     "    noise_scales: The noise scales to use for denoising [NUM_NOISE_SCALES] (sigma_1, sigma_2, ..., sigma_L)\n",
     "    \"\"\"\n",
-    "    noise_scale_idx = torch.randint(0, len(noise_scales), (x.shape[0],), device=device)  # Random noise scale for each sample\n",
-    "    noise_scale_batch = noise_scales[noise_scale_idx].view(-1, 1, 1, 1)\n",
+    "    noise_scale_idx = torch.randint(0, len(noise_scales), (x.shape[0],), device=device)  # Random noise scale for each sample in the batch\n",
+    "    noise_scale_batch = noise_scales[noise_scale_idx].view(-1, 1, 1, 1)  # all entries in an image x should be perturbed by the same noise scale\n",
     "\n",
     "    ### YOUR CODE HERE ###\n",
     "    pass"
@@ -486,10 +483,6 @@
     "        self.eps = eps\n",
     "\n",
     "    def forward(self, x, noise_scale_idx):\n",
-    "        # x: (batch_size, in_channels, height, width)\n",
-    "        # noise_scale_idx: (batch_size)\n",
-    "        # gamma: (n_noise_scale, in_channels)\n",
-    "\n",
     "        bsz = x.shape[0]\n",
     "        gamma = self.gamma[noise_scale_idx].view(bsz, -1, 1, 1)  # (bsz, in_channels, 1, 1)\n",
     "        beta = self.beta[noise_scale_idx].view(bsz, -1, 1, 1)\n",
@@ -512,7 +505,6 @@
     "            s = torch.sqrt(v + self.eps)  # (batch_size, 1, 1, 1)\n",
     "\n",
     "        x = x + alpha * (mu - m) / s  # (batch_size, in_channels, height, width)\n",
-    "        \n",
     "        return x\n",
     "\n",
     "\n",
@@ -527,7 +519,6 @@
     "\n",
     "    def forward(self, x, noise_scale_idx):\n",
     "        # x: (batch_size, in_channels, height, width)\n",
-    "\n",
     "        h = self.norm1(x, noise_scale_idx) if self.norm1 is not None else x\n",
     "        h = self.act(h)\n",
     "        h = self.conv1(h)\n",
@@ -754,7 +745,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Train a UNet according to the loss implemented above on MNIST. It is recommended to save checkpoints - the model's state dict in case of the machine turning off / crashing (the code should not need to run more than an hour anyways). All hyperparameters have been provided to you and should work. However, you are free to change any values for better performance."
+    "Train a UNet according to the loss implemented above on MNIST. It is recommended to save checkpoints - the model's state dict in case of the machine turning off / crashing (the code should not need to run more than an hour anyways). All hyperparameters have been provided to you and should work in the case everything was implemented correctly. However, you are free to change any values for better performance."
    ]
   },
   {
@@ -818,7 +809,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Generate images using Annealed Langevin Dynamics with the model you have trained above. Visualize the process, you can use the function below or any other method. The images do not need to be perfect but it must be clear that they are handwritten digits with a black background. Example output:"
+    "Generate images using Annealed Langevin Dynamics with the model you have trained above. Visualize the process, you can use the function below or any other method. The images do not need to be perfect but it must be clear that they are handwritten digits with a black background. Example imperfect output:"
    ]
   },
   {
