hw3 added instructions.

--- a/HW3/HW3.ipynb
+++ b/HW3/HW3.ipynb
@@ -72,7 +72,7 @@
     "d\\textbf{x}_t = -\\frac{1}{2}\\beta_t \\textbf{x}_t dt + \\sqrt{\\beta_t} d\\textbf{w}_t\n",
     "$$\n",
     "\n",
-    "Note that in the paper, Figure 2 is of the ALD based SDE, so it looks different than what you will be creating."
+    "Note that in the paper, Figure 2 is of the ALD based SDE, so it looks different than what you will be creating. Throughout this part of the assignment, we will be working with $\\beta_0 = 0.1, \\beta_1 = 20$, $\\beta(t) = (\\beta_1 - \\beta_0)t + \\beta_0$. $\\mathbf{x}_0$ follows a mixture of Gaussians distribution, with probability 0.5 of being centered around -3 and 0.5 of being centered around 3, with standard deviation 0.5."
    ]
   },
   {
